# A3

./: .gitattributes  .gitignore  ACTIVATE_XBOX_CONTROLLER.md  BLUETOOTH_XBOX_SETUP.md  Dockerfile  MOTION_FLOW.md  README.md  README_en.md  README_zh.md  XBOX_CONTROL_SETUP.md  XBOX_HOW_TO_USE.md  XBOX_QUICK_FIX.md  frames_2026-01-04_16.28.14.gv  电机通信协议汇总.md
EDULITE-A3/: CMakeLists.txt  EDULITE-A3.urdf  package.xml
EDULITE-A3/meshes/: 6705.part  6705.stl  6705__2.part  6705__2.stl  el05.part  el05_l4.stl  el05_l5.part  hand_r.part  l4_l5_link_back.part  l4_l5_link_back__2.part  mainlink_back.part  mainlink_motor.part  manifold_solid_brep_39_1.part  manifold_solid_brep_39_1__2.part  manifold_solid_brep_40_1.part  part_10.part  part_15.part  part_4.part  part_8.part  part_8.stl  part_9.part  part_9.stl  part_9__2.part  part_9__2.stl  rack__30_teeth__2.part  rack_base.part  rack_str.part  rs00_l1.part  rs00_l2.part  rs00_l3.part  rs05.part  rs05_l4.part  rs05_l5.part  small_arm_left.part  spur_gear__14_teeth.part  spur_gear__14_teeth.stl
EL_A3_urdf/: README.md
EL_A3_urdf/EL-A3/: CMakeLists.txt
docker/: entrypoint.sh
el_a3_description/: CMakeLists.txt  package.xml
el_a3_description/config/: arm2_only_config.yaml  el_a3_controllers.yaml  el_a3_view.rviz  master_slave_config.yaml  multi_arm_config.yaml  multi_arm_controllers.yaml
el_a3_description/launch/: el_a3_control.launch.py  multi_arm_control.launch.py
el_a3_description/meshes/: hand_r.stl  l5_shake.stl  mainlink_back.stl  part_10.stl  part_4.stl
el_a3_description/urdf/: el_a3.urdf  el_a3.urdf.xacro  el_a3_ros2_control.xacro
el_a3_hardware/: CMakeLists.txt  el_a3_hardware_plugin.xml  package.xml
el_a3_hardware/src/: el_a3_hardware.cpp  robstride_can_driver.cpp  s_curve_generator.cpp  zero_torque_controller.cpp
el_a3_moveit_config/: package.xml
el_a3_ros/: .dockerignore  BLUETOOTH_XBOX_SETUP.md  README.md  README_EN.md  ROS_INTERFACE_REFERENCE.md  XBOX_CONTROL_SETUP.md  XBOX_HOW_TO_USE.md  docker-compose.yml
el_a3_ros/el_a3_teleop/: package.xml  setup.cfg  setup.py
el_a3_ros/el_a3_teleop/config/: xbox_teleop.yaml
el_a3_ros/el_a3_teleop/el_a3_teleop/: __init__.py  xbox_teleop_node.py
el_a3_ros/el_a3_teleop/launch/: real_xbox_teleop.launch.py
el_a3_sdk/: README.md  README_en.md  README_zh.md  __init__.py  arm_manager.py  can_driver.py  data_types.py  interface.py  kinematics.py  ros_interface.py  setup.py  trajectory.py  utils.py
hardware/: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
ros2_ws/: fastrtps_no_shm.xml
ros2_ws/src/el_a3_teleop/: JOYCON_IMU_GUIDE.md  QUICK_START.md  README.md  USAGE_GUIDE.md  package.xml  setup.cfg  setup.py
ros2_ws/src/el_a3_teleop/config/: joycon_imu_teleop.yaml  moveit_servo_config.yaml  xbox_teleop.yaml
ros2_ws/src/el_a3_teleop/el_a3_teleop/: imu_processor.py  joycon_imu_driver.py  joycon_imu_teleop_node.py  joycon_visualizer_node.py  master_slave_node.py  xbox_servo_node.py  xbox_servo_teleop.py  xbox_teleop_node.py
ros2_ws/src/el_a3_teleop/launch/: complete_teleop.launch.py  joycon_imu_teleop.launch.py  master_slave.launch.py  real_teleop.launch.py  servo_teleop.launch.py  sim_teleop.launch.py  simple_teleop.launch.py  xbox_servo_teleop.launch.py  xbox_teleop.launch.py
ros2_ws/src/el_a3_web_ui/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/el_a3_web_ui/el_a3_web_ui/: __init__.py  ros2_bridge.py  sdk_bridge.py  web_server.py
ros2_ws/src/el_a3_web_ui/launch/: web_ui.launch.py
ros2_ws/src/el_a3_web_ui/static/css/: style.css
ros2_ws/src/el_a3_web_ui/static/js/: app.js  control_panel.js  dashboard.js  robot_viewer.js
ros2_ws/src/el_a3_web_ui/static/urdf/meshes/: manifold_solid_brep_39_1.stl
ros2_ws/src/el_a3_web_ui/templates/: index.html
ros2_ws/src/rs_a3_grasp_gui/: package.xml  setup.cfg  setup.py
ros2_ws/src/rs_a3_grasp_gui/launch/: gui.launch.py
ros2_ws/src/rs_a3_grasp_gui/rs_a3_grasp_gui/: __init__.py  grasp_gui_node.py
ros2_ws/src/rs_a3_vision/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/rs_a3_vision/config/: hand_eye_calibration.yaml  vision_config.yaml
ros2_ws/src/rs_a3_vision/launch/: camera_only.launch.py  full_grasp_system.launch.py  vision_grasp.launch.py
ros2_ws/src/rs_a3_vision/rs_a3_vision/: __init__.py  camera_node.py  grasp_manager.py  hand_eye_calibration.py  object_detector.py  visual_servo.py
rs_a3_hardware/: CMakeLists.txt  package.xml  rs_a3_hardware_plugin.xml
scripts/: GRAVITY_CALIBRATION_README.md  batch_kp_test.sh  dynamics_calibration.py  foxglove_bridge.service  gravity_calibration.py  gravity_calibration_20260122_192858.json  gravity_calibration_analyzer.py  inertia_calibration.py  install_deps.sh  install_joycon_driver.sh  install_vision_deps.sh  install_xpadneo.sh  joycon_visualizer.py  move_to_zero.py  pinocchio_gravity_calibration.py  setup_bluetooth_xbox.sh  setup_multi_can.sh  simple_motion_test.py  start_real_xbox_control.sh  start_teleop.sh  start_web_ui.sh  start_xbox_control.sh  teleop_master_slave.py  test_kp_values.py  test_master_slave.py  test_teleop_can0_can1.py  test_teleop_can1_master.py  test_xbox_control.sh  wait_and_start_xbox.sh  zero_test.py
src/: ACTIVATE_XBOX_CONTROLLER.md  BLUETOOTH_XBOX_SETUP.md  README.md  XBOX_CONTROL_SETUP.md  XBOX_HOW_TO_USE.md  XBOX_QUICK_FIX.md  电机通信协议汇总.md
src/RS_A3_urdf/RS-A3/: CMakeLists.txt  RS-A3.urdf  package.xml
src/RS_A3_urdf/RS-A3/launch/: display.launch.py
src/RS_A3_urdf/RS-A3/meshes/: rack__30_teeth.stl
src/rs_a3_teleop/: JOYCON_IMU_GUIDE.md  QUICK_START.md  README.md  USAGE_GUIDE.md  package.xml  setup.cfg  setup.py
src/rs_a3_teleop/config/: joycon_imu_teleop.yaml  moveit_servo_config.yaml  xbox_servo_teleop.yaml
src/rs_a3_teleop/launch/: complete_teleop.launch.py  joycon_imu_teleop.launch.py  real_teleop.launch.py  servo_teleop.launch.py  sim_teleop.launch.py  simple_teleop.launch.py  xbox_servo_teleop.launch.py  xbox_teleop.launch.py
src/rs_a3_teleop/rs_a3_teleop/: imu_processor.py  joycon_visualizer_node.py  xbox_servo_node.py  xbox_servo_teleop.py  xbox_teleop_node.py
(+293 files in other folders)
